[package]
name = "witui"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
directories = "5.0.1"
futures = "0.3.30"
lazy_static = "1.5.0"
ratatui = "0.28.1"
reqwest = "0.12.8"
scraper = "0.20.0"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
